# mini-ci

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  deploy-schimmelhof.yml  deploy.sh  docker-compose.yml  docker-deploy.yml  rustfmt.toml
src/: lib.rs  main.rs
src/data/: api_call_delegate.rs  deploy_info_repository.rs  github_repo_repository.rs  github_webhook_repository.rs  mod.rs  repo_info_repository.rs
src/deploy/: clone_repo_service.rs  deploy_service.rs  mod.rs
src/deploy/schimmelhof/: deploy_schimmelhof_api_dev_service.rs  depoy_schimmelhof_api_dev_service.rs  mod.rs
src/di/: mod.rs  singletons.rs  start_up_args.rs
src/domain/: clone_repo_task.rs  deploy_service.rs  init_service.rs  mod.rs
src/entrypoint/: github_push_event_dto.rs  mod.rs  post_github_push_event_handler.rs
tests/: post_github_push_event_handler_test.rs  tests.rs
