[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "untitled"

[[test]]
name = "tests"
path = "tests/tests.rs"
harness = false


[dependencies]
actix-web = "3"
actix-service = "1.0.6"
actix-rt = "1.1.1"
futures = "0.3"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
json = "0.12"
git2 = "0.13"
regex = "*"
lazy_static = "1.4.0"
cmd_lib = "1.3.0"
clap = { version = "3", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }